# safeatomic

./: Makefile  README.md  pyproject.toml  requirements.txt
src/safeatomic/: __init__.py  atomic.py  main.py
tests/: test_simple.py
